--- a/.yasb/styles.css
+++ b/.yasb/styles.css
@@ -1,7 +1,6 @@
 * {
-    /* Bar measurement icons: https://github.com/and3rson/graph-bars-font */
-    /* Icon set: https://fontawesome.com/v5.15/how-to-use/on-the-desktop/setup/getting-started */
-    font-family: 'Font Awesome 5 Free Solid', 'Segoe UI Variable Text', 'Bars';
+    /* Font used with icons is NerdFonts JetBrainsMono */
+    font-family: 'JetBrainsMono NF', 'Bars';
     font-size: 13px;
     color: #f2e5bc;
 }
@@ -22,7 +21,7 @@
 
 .komorebi-workspaces {
   margin-left: 0;
-  font-family: "JetBrainsMonoNL NFP";
+  font-family: "JetBrainsMono NF";
 }
 .ws-btn {
     padding: 5px 8px;
@@ -31,7 +30,7 @@
     margin: 2px 1px;
     font-size: 12px;
     border-radius: 3px;
-    font-family: "JetBrainsMonoNL NFP";
+    font-family: "JetBrainsMono NF Regular";
     color: #ffffff;
 }
 
@@ -88,7 +87,7 @@
 }
 
 .wifi-widget .label {
-  font-family: 'JetBrainsMonoNL NFP';
+  font-family: 'JetBrainsMono NF';
   background: rgba(36, 51, 71, 0.3);
 }
 
@@ -98,7 +97,7 @@
 }
 
 .battery-widget .label {
-  font-family: 'JetBrainsMonoNL NFP';
+  font-family: 'JetBrainsMono NF';
   background: rgba(36, 51, 71, 0.3);
 }
 
@@ -120,7 +119,7 @@
   margin-left: 0px;
 }
 .active-window-widget .label {
-  font-family: 'JetBrainsMonoNL NFP';
+  font-family: 'JetBrainsMono NF';
   padding: -5px 7px 0 7px;
   color: #242424;
   background: #5e86bd;
@@ -132,8 +131,8 @@
 .komorebi-active-layout .label {
   color: #5e86bd;
   margin: 2px 1px;
-  padding: 0 1 3px 1;
-  font-family: 'JetBrainsMonoNL NFP';
+  padding: 0 1px 3px 1px;
+  font-family: 'JetBrainsMono NF';
   border-radius: 3px;
   background: rgba(36, 51, 71, 0.3);
 }
@@ -143,7 +142,7 @@
 }
 
 .clock-widget .label {
-  font-family: 'JetBrainsMonoNL NFP';
+  font-family: 'JetBrainsMono NF';
   color: #ffffff;
   margin: 8px 0;
 }
